# rustic-notification

./: .env-example  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/api/: api.rs
src/config/: config.rs
src/database/: database.rs
src/email/: email.rs
