[package]
name = "rustic-notification"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
notify-rust = "4.11.5"
reqwest = { version = "0.12.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.28.2", features = ["full"] }
tokio-postgres = "0.7.13"

